--- a/estilos.css
+++ b/estilos.css
@@ -3,7 +3,7 @@ body{
 }
 h1{
     text-align: center;
-    color: #DFF6FF;
+    color: #dba7d3;
 }
 h1 {
     color: rgb(255,0, 0);
@@ -42,10 +42,10 @@ ul li {
     background-color: rgb(0,0,255);
 }
 .etiqueta{
-    background-color: rgb(231, 154, 225);
+    background-color: rgb(243, 177, 237);
 }
 .etiquet{
     border-radius: 10px;
-    background-color: #96ec9d;
+    background-color: #a4ebaa;
     color: #FFF5E9;
 }
