--- a/Lunes8enero/style.css
+++ b/Lunes8enero/style.css
@@ -49,6 +49,9 @@
     font-size: var(--md);
     cursor: pointer;
     margin: 100px 0 100px 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .more-imfo{
@@ -61,7 +64,7 @@
     display: flex;
     align-items: center;
     margin: 16px 0 16px 0;
-    flex-direction: column-reverse;
+    flex-direction: row;
     align-items: center;
     justify-content: center;
 }
@@ -99,3 +102,11 @@
     margin: 0;
 }
 
+@media (max-width: 720px){
+    .icon-container{
+        grid-template-columns: (repeat(1, 1fr));
+        margin: 50px 10px 50px 10px ;
+    }
+    .icon-text p{
+    }
+}
