--- a/semana4/galeria-perritos/src/app/components/foto.module.css
+++ b/semana4/galeria-perritos/src/app/components/foto.module.css
@@ -2,9 +2,12 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    text-align: center;
 }
 
 .contenedor img{
     border-radius: 50%;
     object-fit: cover;
 }
+
+
